@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<addon id="plugin.game.gamehub" name="GameHub" version="1.0.1" provider-name="solbero">
+<addon id="plugin.game.gamehub" name="GameHub" version="1.0.2" provider-name="solbero">
     <requires>
         <import addon="xbmc.python" version="2.26.0" />
     </requires>
@@ -12,9 +12,9 @@
         <disclaimer lang="en_GB">For more information about GameHub, visit tkashkin.tk/projects/gamehub/.</disclaimer>
         <license>GPL-2.0</license>
         <website>https://tkashkin.tk/projects/gamehub/</website>
-        <news lang="en_GB"> Version 1.0.0: September 14th, 2019
-            - Initial commit</news>
-        <source>http://github.com/solbero/script.gamehub</source>
+        <news lang="en_GB">Version 1.0.2: March 19th, 2020
+            - Various code fixes</news>
+        <source>https://github.com/solbero/plugin.game.gamehub</source>
         <language>en</language>
         <platform>linux</platform>
         <assets>
