@@ -1,3 +1,7 @@
+[B]Version 1.0.2: March 19th, 2020[/B]
+
+- Various code fixes
+
 [B]Version 1.0.1: September 15th, 2019[/B]
 
 - Fix image paths
